--- a/SCARA esp32/platformio.ini
+++ b/SCARA esp32/platformio.ini
@@ -15,4 +15,6 @@ framework = arduino
 monitor_speed = 9600
 lib_deps = 
 	waspinator/AccelStepper@^1.64
-	arduino-libraries/Servo@^1.2.1
+	madhephaestus/ESP32Servo@^1.2.1
+	adafruit/Adafruit SSD1306@^2.5.9
+	adafruit/Adafruit GFX Library@^1.11.9
